# myQuickFolderTagger

./: .gitignore  README.md  llm_client.py  pyproject.toml  storage.py  tagger.py
test-project/: README.md
